added api keys and readme file details about the keys

--- a/index.html
+++ b/index.html
@@ -14,12 +14,16 @@
     </header>
     
     <main>
+        <input type="search" id="place-search-input" placeholder="My Current location" />
+        <input type="search" id="radius-search-input" placeholder="My Radius is"/>
+        <button type="button" id="btnSearch">Search</button>
     </main>
 
     <footer>
     </footer>
 
-    <script src="./assets/js/script.js"></script>
+    <!--<script src="./assets/js/script.js"></script>-->
+    <script src="./assets/js/mapScript.js"></script>
 </body>
 
 </html>
