--- a/index.html
+++ b/index.html
@@ -7,19 +7,41 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Day Trip Picker</title>
     <link rel="stylesheet" href="./assets/css/style.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
+
 </head>
 
 <body>
     <header>
+        <!-- need to design persistent header for all pages -->
+        <h1>Day Trip Picker (working name)</h1>
     </header>
     
     <main>
+        <!-- section for the homepage -->
+        <div>
+            <h2>Welcome</h2>
+            <p>Thanks for trying our app! Enter your name below to get started.</p>
+
+            <p>Name</p>
+            <input type="text" placeholder="Enter Your Name" />
+            <button type="button">Get Started</button>
+
+        </div>
+
+        <!-- section for Form page-->
+        <div style="display:none;"> <!-- should this be "hidden"? -->
+            <h2>Search</h2>
+        </div>
+
+
     </main>
 
     <footer>
     </footer>
 
     <script src="./assets/js/script.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8" crossorigin="anonymous"></script>
 </body>
 
 </html>
