updated the button

--- a/index.html
+++ b/index.html
@@ -43,8 +43,11 @@
                     <input type="text" class="form-control"
                         id="radius-search-input" placeholder="My Radius is" />
                 </div>
-                <button class="btn btn-block btn-success" id="btnSearch">Search</button>
+                <button id="btnSearch">Search</button>
             </form>
+            <select>
+                
+            </select>
         </main>
 
         <footer>
