API calls for general weather information

--- a/index.html
+++ b/index.html
@@ -14,12 +14,18 @@
     </header>
     
     <main>
+        <div>
+            <form id="location-form">
+                <input name="location" id="location-input" type="text" placeholder="Please Enter location">
+                <button type="submit">Search</button>
+            </form>
+        </div>
     </main>
 
     <footer>
     </footer>
 
-    <script src="./assets/js/script.js"></script>
+    <script src="./assets/js/weatherSript.js"></script>
 </body>
 
 </html>
