added placeholders for weather

--- a/index.html
+++ b/index.html
@@ -65,7 +65,11 @@
             </div>
 
             <!-- weather preferences to be added here-->
-            
+            <div>
+                <p>What's your preferred weather?</p>
+                <!-- add sliders here -->
+                <!-- add % cloudy here -->
+            </div>
         </section>
 
 
