--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             <!-- dropdown for selecting a radius of how far you're willing to travel -->
             <div>
                 <p>How far would you like to go?</p>
-                <select class="select-dropdown">
+                <select class="select-dropdown" id="#radius-search-input">
                     <option value="" disabled selected>Select a distance</option>
                     <option value="1 mile">1 mile</option>
                     <option value="5 miles">5 miles</option>
