Getting the POI

--- a/index.html
+++ b/index.html
@@ -37,13 +37,12 @@
         <!-- section for Results page -->
         <section style="display:block;">
             <h2>Places</h2>
-            
             <!-- input for searching map locations and selecting an address -->
             <div>
                 <p>What's your current location?</p>
                 <input type="search" id="current-search-location" placeholder="Search for a location" />
             </div>
-            
+
             <!-- dropdown for selecting a radius of how far you're willing to travel -->
             <div>
                 <p>How far would you like to go?</p>
@@ -63,6 +62,8 @@
                 <p>Date: <input type="text" id="datepicker"></p>
 
             </div>
+
+            <button type ="button" id="btnSearch">Search</button>
 
             <!-- weather preferences to be added here-->
             <div>
