--- a/index.html
+++ b/index.html
@@ -49,11 +49,11 @@
                     <h4><span class="icon is-medium is-left"><i class="fa-solid fa-car"></i></span>How far would you like to go?</h4>
                     <select class="select-dropdown">
                         <option value="" disabled selected>Select a distance</option>
-                        <option value="1 mile">1 mile</option>
-                        <option value="5 miles">5 miles</option>
-                        <option value="50 miles">50 miles</option>
-                        <option value="100 miles">100 miles</option>
-                        <option value="250 miles">250 miles</option>
+                        <option value="1">1 mile</option>
+                        <option value="5">5 miles</option>
+                        <option value="50">50 miles</option>
+                        <option value="100">100 miles</option>
+                        <option value="250">250 miles</option>
                     </select>
                 </div>
 
@@ -67,29 +67,6 @@
 
                 </div>
 
-<<<<<<< HEAD
-        <!-- section for Results page -->
-        <section style="display:block;">
-            <h2>Places</h2>
-            <!-- input for searching map locations and selecting an address -->
-            <div>
-                <p>What's your current location?</p>
-                <input type="search" id="current-search-location" placeholder="Search for a location" />
-            </div>
-
-            <!-- dropdown for selecting a radius of how far you're willing to travel -->
-            <div>
-                <p>How far would you like to go?</p>
-                <select class="select-dropdown" id="#radius-search-input">
-                    <option value="" disabled selected>Select a distance</option>
-                    <option value="1 mile">1 mile</option>
-                    <option value="5 miles">5 miles</option>
-                    <option value="50 miles">50 miles</option>
-                    <option value="100 miles">100 miles</option>
-                    <option value="250 miles">250 miles</option>
-                </select>
-            </div>
-=======
                 <!-- weather preferences to be added here-->
                 <div class="all-forms">
                     <h4>What are your acceptable weather conditions?</h4>
@@ -106,7 +83,6 @@
                                 <option value="higher than 80 less than 90">between 80 and 90 </option>
                             </select>
                         </div>
->>>>>>> main
 
                         <label name="cloud" class="label"><span class="icon is-medium is-left"><i class="fa-solid fa-cloud"></i></span> Please select acceptable cloudiness </label>
                         <div class="select is-rounded is normal is-link">
@@ -128,17 +104,6 @@
                             </select>
                         </div>
 
-<<<<<<< HEAD
-            <button type ="button" id="btnSearch">Search</button>
-
-            <!-- weather preferences to be added here-->
-            <div>
-                <p>What's your preferred weather?</p>
-                <!-- add sliders here -->
-                <!-- add % cloudy here -->
-            </div>
-        </section>
-=======
                         <label name="humid" class="label"><span class="icon is-medium is-left"><i class="fa-solid fa-snowflake"></i></span> Do you mind a little rain/snow? </label>
                         <div class="select is-rounded is normal is-link">
                             <select id="precipitation-selection">
@@ -147,7 +112,6 @@
                                 <option value="false">not for me! </option>
                             </select>
                         </div>
->>>>>>> main
 
                         <div >
                             <button type="button" id="weather-submit" class="button is-link is-outlined is-rounded is-light is-normal">Let's go!</button>
@@ -169,8 +133,8 @@
 
     <script src="./assets/js/weatherSript.js"></script>
     <!--<script src="./assets/js/script.js"></script>
-    <script src="./assets/js/mapScript.js" type="module"></script>
-    <script src="./assets/js/mapScript.js" ></script> -->
+    <script src="./assets/js/mapScript.js" type="module"></script>-->
+    <script src="./assets/js/mapScript.js" ></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8" crossorigin="anonymous"></script>
 </body>
 
