--- a/results-page.html
+++ b/results-page.html
@@ -9,9 +9,22 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
     <link rel="stylesheet" href="./assets/css/style.css">
+    <link class="tabIcon" rel="icon" type="image/x-icon" href="./assets/images/favicon.png" alt="gofavicon"> </link>
 </head>
 <body>
-    
+    <header>
+        <!-- need to design persistent header for all pages -->
+        <div class="text-center m-2 py-3"><h1>Here are our suggestions!</h1></div> <!-- (working name) -->
+    </header>
+    <main>
+        <section class="row min-vh-100 main-section">
+             <!-- section for Results page -->
+            <section class="col-12 col-md-8 col-lg-10">
+                <h2>Places</h2>
+            </section>
+        </section>
+    </main>
+
     <script src="./assets/js/weatherSript.js"></script>
     <!--<script src="./assets/js/script.js"></script>
     <script src="./assets/js/mapScript.js" type="module"></script>-->
