--- a/destination-form.html
+++ b/destination-form.html
@@ -35,11 +35,11 @@
                     <h4><span class="icon is-medium is-left"><i class="fa-solid fa-car"></i></span>How far would you like to go?</h4>
                     <select class="select-dropdown">
                         <option value="" disabled selected>Select a distance</option>
-                        <option value="1 mile">1 mile</option>
-                        <option value="5 miles">5 miles</option>
-                        <option value="50 miles">50 miles</option>
-                        <option value="100 miles">100 miles</option>
-                        <option value="250 miles">250 miles</option>
+                        <option value="1">1 mile</option>
+                        <option value="5">5 miles</option>
+                        <option value="50">50 miles</option>
+                        <option value="100">100 miles</option>
+                        <option value="250">250 miles</option>
                     </select>
                 </div>
 
