updated Get Started button

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                     <form id="name-form">
                         <label name="name" class="label"><span class="icon is-medium is-left"><i class="fa-regular fa-id-badge"></i></span> Please enter your name: </label>
                         <input name="name" id="name-input" type="text" class="input is-info is- is-rounded" placeholder="Name"/>
-                        <button type="submit" id="name-submit" class="button is-link is-outlined is-rounded is-light is-normal">Get Started</button>
+                        <a href="./destination-form.html" class="button" class="input is-info is-is-rounded">Get Started</a>
                     </form>
                 </div>
             </section>
