--- a/index.html
+++ b/index.html
@@ -27,8 +27,7 @@
                     <form id="name-form">
                         <label name="name" class="label"><span class="icon is-medium is-left"><i class="fa-regular fa-id-badge"></i></span> Please enter your name: </label>
                         <input name="name" id="name-input" type="text" class="input is-info is- is-rounded" placeholder="Name"/>
-                        <button type="submit" id="name-submit" class="button is-link is-outlined is-rounded is-light is-normal" >Get Started</button>
-                    </form>
+                        <a href="./destination-form.html" class="button" class="input is-info is-is-rounded">Get Started</a> </form>
                 </div>
             </section>       
             
@@ -39,10 +38,10 @@
     <footer>
     </footer>
 
-    <script src="./assets/js/weatherSript.js"></script>
-    <!--<script src="./assets/js/script.js"></script>
-    <script src="./assets/js/mapScript.js" type="module"></script>-->
-    <script src="./assets/js/mapScript.js" ></script>
+    <!--<script src="./assets/js/weatherSript.js"></script>
+    <script src="./assets/js/script.js"></script>
+    <script src="./assets/js/mapScript.js" type="module"></script>
+    <script src="./assets/js/mapScript.js" ></script>-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8" crossorigin="anonymous"></script>
 </body>
 
