--- a/destination-form.html
+++ b/destination-form.html
@@ -83,9 +83,7 @@
     </main>
 
     <script src="./assets/js/weatherSript.js"></script>
-    <!--<script src="./assets/js/script.js"></script>
-    <script src="./assets/js/mapScript.js" type="module"></script>-->
-    <script src="./assets/js/mapScript.js"></script>
+    <script src="./assets/js/destinationScript.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8"
         crossorigin="anonymous"></script>
