updated to open calendar modal and added the list.

--- a/destination-form.html
+++ b/destination-form.html
@@ -69,8 +69,10 @@
                     <h4><span class="icon is-medium is-left"><i class="fa-solid fa-calendar"></i>
                         </span>When would you like to go?
                     </h4>
-
-                    <div id="calendar">
+                    <button class="js-modal-trigger" data-target="modal-js-example">
+                        Open calendar modal
+                      </button>
+                    <div id="calendar" >
                         <div class="modal">
                             <div class="modal-background"></div>
                             <div class="modal-content">
