updated the script

--- a/destination-form.html
+++ b/destination-form.html
@@ -46,7 +46,7 @@
                         <h4><span class="icon is-medium is-left"><i class="fa-solid fa-car"></i></span>How far would you
                             like to go?</h4>
                         <select class="select-dropdown" id="radius-search-dropdown">
-                          <!-- <option value="" disabled selected>Select a distance</option>--> 
+                            <option value="" disabled selected>Select a distance</option>
                             <option type="search" value="1">1 mile</option>
                             <option type="search" value="5">5 miles</option>
                             <option type="search" value="50">50 miles</option>
