--- a/eventResults.html
+++ b/eventResults.html
@@ -24,7 +24,7 @@
             <section class="col-12 col-md-8 col-lg-10 name-form">
                 <div class="all-forms flex justify-space-around">
                    
-                    <ul class="col-8 mb-3"></ul>
+                    <ul id="eventList" class="col-8 mb-3"></ul>
                 </div>
             </section>
 
