working on displaying the results

--- a/destination-form.html
+++ b/destination-form.html
@@ -82,6 +82,7 @@
                 </div>
                 <button type="submit" id="location-submit"
                 class="button is-link is-outlined is-rounded is-light is-normal">Next</button>
+                <a id="stud" href="./results-page.html" class="button is-link is-outlined is-rounded is-light is-normal">Stud</a>
 
             </section>
         </section>
