--- a/results-page.html
+++ b/results-page.html
@@ -12,10 +12,12 @@
     <link class="tabIcon" rel="icon" type="image/x-icon" href="./assets/images/favicon.png" alt="gofavicon"> </link>
 </head>
 <body>
-    <header>
-        <!-- need to design persistent header for all pages -->
-        <div class="text-center m-2 py-3"><h1>Here are our suggestions!</h1></div> <!-- (working name) -->
-    </header>
+    <section class="hero is-large">
+        <div class="hero-body">
+            <h1 class="homepage-header">let's set the weather conditions!</h1>
+        </div>
+    </section>
+
     <main>
         <section class="row min-vh-100 main-section">
              <!-- section for Results page -->
@@ -25,8 +27,8 @@
         </section>
     </main>
 
-    <script src="./assets/js/weatherSript.js"></script>
-    <!--<script src="./assets/js/script.js"></script>
+    <!-- <script src="./assets/js/weatherSript.js"></script>
+    <script src="./assets/js/script.js"></script>
     <script src="./assets/js/mapScript.js" type="module"></script>-->
     <script src="./assets/js/mapScript.js" ></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8" crossorigin="anonymous"></script>
