--- a/weather-form.html
+++ b/weather-form.html
@@ -12,19 +12,21 @@
     <link class="tabIcon" rel="icon" type="image/x-icon" href="./assets/images/favicon.png" alt="gofavicon"> </link>
 </head>
 <body>
-    <header>
-        <!-- need to design persistent header for all pages -->
-        <div class="text-center m-2 py-3"><h1>Let's set the weather conditions!</h1></div> <!-- (working name) -->
-    </header>
+    
+    <section class="hero is-large">
+        <div class="hero-body">
+            <h1 class="homepage-header">let's set the weather conditions!</h1>
+        </div>
+    </section>
+
     <main>
-        <section class="row min-vh-100 main-section">
-            <!-- weather preferences to be added here-->
-            <div class="all-forms">
+    <section class="row min-vh-100 main-section">
+        <div class="weather-box ">
+            <div class="form-box">
                 <h4>What are your acceptable weather conditions?</h4>
-                <!-- add sliders here -->
                 <form id="weather-form">
                     <label for="temp-selection" class="label"><span class="icon is-medium is-left"><i class="fa-solid fa-temperature-quarter"></i></span> Please select the temperature range </label>
-                    <div class="select is-rounded is normal is-link">
+                    <div class="select is-rounded is normal is-success">
                         <select id="temp-selection" name="temp">
                             <option value="selectoption">select option</option>
                             <option value="higher than 40 less than 55">between 40 and 55 </option>
@@ -35,7 +37,7 @@
                     </div>
 
                     <label for="cloud-selection" class="label"><span class="icon is-medium is-left"><i class="fa-solid fa-cloud"></i></span> Please select acceptable cloudiness </label>
-                    <div class="select is-rounded is normal is-link">
+                    <div class="select is-rounded is normal is-success">
                         <select id="cloud-selection" name="cloud">
                             <option value="selectoption">select option</option>
                             <option value="between 0 and 40">partly cloudy</option>
@@ -45,7 +47,7 @@
                     </div>
 
                     <label for="humid-selection" class="label"><span class="icon is-medium is-left"><i class="fa-solid fa-droplet"></i></span> Please select acceptable humidity </label>
-                    <div class="select is-rounded is normal is-link">
+                    <div class="select is-rounded is normal is-success">
                         <select id="humid-selection" name="humid">
                             <option value="selectoption">select option</option>
                             <option value="higher than 30 less than 50">30% - 50% </option>
@@ -55,7 +57,7 @@
                     </div>
 
                     <label for="precipitation-selection" class="label"><span class="icon is-medium is-left"><i class="fa-solid fa-snowflake"></i></span> Do you mind a little rain/snow? </label>
-                    <div class="select is-rounded is normal is-link">
+                    <div class="select is-rounded is normal is-success">
                         <select id="precipitation-selection" name="rain-snow">
                             <option value="selectoption">select option</option>
                             <option value=true>surprise me!</option>
@@ -63,24 +65,25 @@
                         </select>
                     </div>
 
-                    <div >
-                        <button type="button" id="weather-submit" class="button is-link is-outlined is-rounded is-light is-normal">Let's go!</button>
+                    <div>
+                        <button type="button" id="weather-submit" class="button is-success is-outlined is-rounded is-light is-normal">done!</button>
+                    </div>
+                    <div class="extra-btn">
+                        <a href="./results-page.html" class="button is-success is-outlined is-rounded is-light is-normal">next</a>
                     </div>
                 </form>
+                </div>
             </div>
-
-
             <div id="display-results">
+        </div>
 
-            </div>
 
-
-        </section>
+    </section>
     </main>
 
     <script src="./assets/js/validationScript.js"></script>
-    <script src="./assets/js/destinationScript.js"></script>
-    <script src="./assets/js/weatherSript.js"></script>
+    <!-- <script src="./assets/js/destinationScript.js"></script>
+    <script src="./assets/js/weatherSript.js"></script> -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8" crossorigin="anonymous"></script>
 </body>
 </html>
