--- a/index.html
+++ b/index.html
@@ -13,11 +13,9 @@
 </head>
 
 <body>
-    
-    <section class="hero is-large">
-        <div class="hero-body">
-            <h1 class="homepage-header">welcome to day trip picker!</h1>
-        </div>
+    <h1 class="homepage-header">welcome to day trip picker!</h1>
+    <section class="hero is-medium">
+        <div class="hero-body"></div>
     </section>
 
     <main>
