--- a/results-page.html
+++ b/results-page.html
@@ -12,10 +12,9 @@
     <link class="tabIcon" rel="icon" type="image/x-icon" href="./assets/images/favicon.png" alt="gofavicon"> </link>
 </head>
 <body>
-    <section class="hero is-large">
-        <div class="hero-body">
-            <h1 class="homepage-header">let's set the weather conditions!</h1>
-        </div>
+    <h1 class="homepage-header">welcome to day trip picker!</h1>
+    <section class="hero is-medium">
+        <div class="hero-body"></div>
     </section>
 
     <main>
