--- a/weather-form.html
+++ b/weather-form.html
@@ -13,10 +13,9 @@
 </head>
 <body>
     
-    <section class="hero is-large">
-        <div class="hero-body">
-            <h1 class="homepage-header">let's set the weather conditions!</h1>
-        </div>
+    <h1 class="homepage-header">welcome to day trip picker!</h1>
+    <section class="hero is-medium">
+        <div class="hero-body"></div>
     </section>
 
     <main>
@@ -81,9 +80,9 @@
     </section>
     </main>
 
-    <script src="./assets/js/validationScript.js"></script>
-    <!-- <script src="./assets/js/destinationScript.js"></script>
-    <script src="./assets/js/weatherSript.js"></script> -->
+    <!-- <script src="./assets/js/validationScript.js"></script> -->
+    <!-- <script src="./assets/js/destinationScript.js"></script> -->
+    <script src="./assets/js/weatherSript.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8" crossorigin="anonymous"></script>
 </body>
 </html>
