updated destination screen

--- a/results-page.html
+++ b/results-page.html
@@ -24,12 +24,14 @@
             <section class="col-12 col-md-8 col-lg-10">
                 <h2>Places</h2>
             </section>
-            <section class="col-12 col-md-8 col-lg-10 name-form">
+           <!--<section class="col-12 col-md-8 col-lg-10 name-form">
                 <div class="all-forms flex justify-space-around">
-                    <ul id="eventList" class="col-8 mb-3"></ul>
+                 
                 </div>
-            </section>
+            </section> -->
         </section>
+       <!-- <h2>Places2</h2>
+        <ul id= "eventList"class="col-8 mb-3"></ul>-->
     </main>
 
     <script src="./assets/js/weatherSript.js"></script>
