updated the new HTML doc.

--- a/destination-form.html
+++ b/destination-form.html
@@ -21,14 +21,14 @@
 </head>
 
 <body>
-
+    <main id="destination-page" class="pageSections">
     <section class="hero is-large">
         <div class="hero-body">
             <h1 class="homepage-header">let's pick a destination!</h1>
         </div>
     </section>
 
-    <main>
+  
     <section class="row min-vh-100 main-section">
         <!-- section for Form page-->
         <section class="col-12 col-md-8 col-lg-10">
@@ -79,12 +79,22 @@
                 <button type="submit" id="location-submit"
                 class="button is-link is-outlined is-rounded is-light is-normal">Next</button>
                 <a id="stud" href="./results-page.html" class="button is-link is-outlined is-rounded is-light is-normal">Stud</a>
+                <a id="driver" href="#results" class="button is-link is-outlined is-rounded is-light is-normal">driver</a>
 
             </section>
         </section>
     </section>
-    <h2>Places2</h2>
-    <ul id= "eventList"class="col-8 mb-3"></ul>
+    <section class="row min-vh-100 main-section" id ="results">
+       section for Results page 
+       <section class="col-12 col-md-8 col-lg-10">
+           <h2>Places</h2>
+       </section>
+      <section class="col-12 col-md-8 col-lg-10 name-form">
+           <div class="all-forms flex justify-space-around">
+            <ul id= "eventList"class="col-8 mb-3"></ul>
+           </div>
+       </section> 
+   </section>
     </main>
 
   
