--- a/index.html
+++ b/index.html
@@ -14,14 +14,14 @@
 
 <body>
     
-    <section class="hero is-large">
+    <section class="hero is-">
         <div class="hero-body">
-            <h1 class="homepage-header">welcome to day trip picker!</h1>
         </div>
     </section>
 
-    <main>
     <section class="row min-vh-100 main-section">
+        <header class="homepage-header">welcome to day trip picker! </header>
+       
         <!-- section for the homepage -->
         <section class="col-12 col-md-6 col-lg-8 ">
             <div class="all-forms ">
@@ -36,6 +36,9 @@
             </div>
         </section>
     </section>
+
+    <main>
+
     </main>
     <footer> </footer>
 
