date picker modal

--- a/index.html
+++ b/index.html
@@ -84,11 +84,22 @@
                         <div id="calendar" >
                             <div class="modal">
                                 <div class="modal-background"></div>
-                                <div class="modal-content">
-                                    <p class="image is-4by3">
-                                        <img src="https://bulma.io/images/placeholders/200x200.png" alt="">
-                                    </p>
+                                    <div class="modal-content" class="calendar-modal" class="fa-solid fa-car">
+                                        <h4 class="d-flex justify-content-center">When is your day trip?</h4>
+                                        <input class="input is-primary" id=date type="text" placeholder="Primary input">
+                                        
+                                        <!-- should I put this script in a JS file? -->
+                                            <script>
+                                                $(function() {
+                                                $("#date").datepicker();
+                                                });
+                                            </script>
+                                            
+                                            <button type="submit" class="button is-primary" class="btn btn-default" onClick="validateCalendar()" required aria-required="true" class="d-flex justify-content-center">Submit</button>
+                                            <button class="modal-close is-large" aria-label="close"></button>
+                                    </div>
                                 </div>
+
                                 <button class="modal-close is-large" aria-label="close"></button>
                             </div>
                         </div>
