updated styling on calendar input

--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
     <link rel="stylesheet" href="./assets/css/style.css">
     <link class="tabIcon" rel="icon" type="image/x-icon" href="./assets/images/favicon.png" alt="gofavicon"> </link>
+    <link rel="stylesheet" href="http://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
+    <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
+    <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
 </head>
 
 <body>
@@ -85,8 +88,8 @@
                             <div class="modal">
                                 <div class="modal-background"></div>
                                     <div class="modal-content" class="calendar-modal" class="fa-solid fa-car">
-                                        <h4 class="d-flex justify-content-center">When is your day trip?</h4>
-                                        <input class="input is-primary" id=date type="text" placeholder="Primary input">
+                                        <h4 class="d-flex justify-content-center" class="modal-content-h4" >When is your day trip?</h4>
+                                        <input class="input is-primary" id=date type="text" placeholder="Primary input" class="calendar input">
                                         
                                         <!-- should I put this script in a JS file? -->
                                             <script>
