dynamic name in header

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     <main id="destinationpage" class="pageSections">
         <section class="hero is-large">
             <div class="hero-body">
-                <h1 class="homepage-header">let's pick a destination!</h1>
+                <h1 class="homepage-header"><span id="printName"></span>, let's pick a destination!</h1>
             </div>
         </section>
       
